# myengine

./: CMakeLists.txt  Doxyfile  README.md
contrib/msvc-windows-amd64/lib/: SDL2-static.lib  SDL2.lib  SDL2main.lib
curuthers/: run2.anm
models/curuthers/: run.anm
src/demo/: main.cpp
src/myengine/: Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Exception.cpp  Exception.h  Keyboard.cpp  Keyboard.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Resources.h  Transform.cpp  Transform.h  myengine.h
